--- a/Account Service/Attention to business/task-info.yaml
+++ b/Account Service/Attention to business/task-info.yaml
@@ -709,6 +709,583 @@ files:
       };
     }
   learner_created: false
+- name: src/account/services/UserService.java
+  visible: true
+  text: |
+    package account.services;
+
+    import account.entities.User;
+    import account.repositories.UserRepository;
+    import org.springframework.beans.factory.annotation.Autowired;
+    import org.springframework.security.core.userdetails.UserDetails;
+    import org.springframework.security.core.userdetails.UserDetailsService;
+    import org.springframework.security.core.userdetails.UsernameNotFoundException;
+    import org.springframework.stereotype.Service;
+
+    import java.util.Optional;
+
+    @Service
+    public class UserService implements UserDetailsService {
+
+        @Autowired
+        private UserRepository userRepository;
+
+        @Override
+        public UserDetails loadUserByUsername(String s) throws UsernameNotFoundException {
+    //        Optional<User> user = userRepository.findByUsername(s);
+            Optional<User> user = userRepository.findByUsername(s.toLowerCase());
+
+            if (user.isPresent()){
+                return user.get();
+            }else{
+                throw new UsernameNotFoundException(String.format("Username[%s] not found"));
+            }
+        }
+    }
+  learner_created: true
+- name: src/account/configurations/SecurityConfig.java
+  visible: true
+  text: |
+    package account.configurations;
+
+    import org.springframework.beans.factory.annotation.Autowired;
+    import org.springframework.context.annotation.Bean;
+    import org.springframework.context.annotation.Configuration;
+    import org.springframework.http.HttpMethod;
+    import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+    import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
+    import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+    import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+    import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
+    import org.springframework.security.config.http.SessionCreationPolicy;
+    import org.springframework.security.core.userdetails.UserDetailsService;
+    import org.springframework.security.crypto.password.PasswordEncoder;
+
+    @Configuration
+    @EnableWebSecurity
+    public class SecurityConfig extends WebSecurityConfigurerAdapter {
+
+        @Autowired
+        private UserDetailsService userDetailsService;
+
+        @Autowired
+        private PasswordEncoder passwordEncoder;
+
+        @Override
+        protected void configure(AuthenticationManagerBuilder auth) throws Exception {
+            auth.authenticationProvider(authenticationProvider());
+        }
+
+        @Override
+        protected void configure(HttpSecurity http) throws Exception {
+            http
+                .httpBasic()
+                .and()
+                .csrf().disable().headers().frameOptions().disable() // for Postman, the H2 console
+                .and()
+                .authorizeRequests()
+                .antMatchers("/h2-console/**").permitAll()
+                .and()
+                .authorizeRequests()
+                .antMatchers(HttpMethod.POST, "/api/auth/signup", "/actuator/shutdown").permitAll()
+                .and()
+                .authorizeRequests()
+                .anyRequest().authenticated()
+                .and()
+                .sessionManagement()
+                .sessionCreationPolicy(SessionCreationPolicy.STATELESS); // no session
+        }
+
+        @Bean
+        public DaoAuthenticationProvider authenticationProvider(){
+            DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
+            provider.setPasswordEncoder(passwordEncoder);
+            provider.setUserDetailsService(userDetailsService);
+            return provider;
+        }
+    }
+  learner_created: true
+- name: src/account/controllers/AccountServiceController.java
+  visible: true
+  text: |
+    package account.controllers;
+
+    import account.entities.Role;
+    import account.entities.User;
+    import account.exceptions.UserException;
+    import account.repositories.UserRepository;
+    import org.springframework.beans.factory.annotation.Autowired;
+    import org.springframework.security.core.Authentication;
+    import org.springframework.security.core.annotation.AuthenticationPrincipal;
+    import org.springframework.security.core.context.SecurityContextHolder;
+    import org.springframework.security.crypto.password.PasswordEncoder;
+    import org.springframework.web.bind.annotation.GetMapping;
+    import org.springframework.web.bind.annotation.PostMapping;
+    import org.springframework.web.bind.annotation.RequestBody;
+    import org.springframework.web.bind.annotation.RestController;
+
+    import javax.validation.Valid;
+    import javax.validation.constraints.Email;
+    import javax.validation.constraints.NotBlank;
+    import javax.validation.constraints.Pattern;
+    import javax.validation.constraints.Size;
+    import java.util.LinkedHashMap;
+    import java.util.Map;
+
+    @RestController
+    public class AccountServiceController {
+
+        @Autowired
+        private UserRepository userRepository;
+
+        @Autowired
+        private PasswordEncoder passwordEncoder;
+
+        @GetMapping("/api/empl/payment")
+        public Map<String, Object> testAuth(@AuthenticationPrincipal User user) {
+            return createResponse(user);
+        }
+
+        @PostMapping("/api/auth/signup")
+        public Map<String, Object> createUser(@Valid @RequestBody UserRegistration userRegistration) {
+
+            String username = userRegistration.getEmail().toLowerCase();
+            if (userRepository.findByUsername(username).isPresent()) {
+                throw new UserException("User exist!");
+            }
+
+            User user = new User();
+            user.setUsername(username);
+            user.setName(userRegistration.getName());
+            user.setLastname(userRegistration.getLastname());
+            user.setEmail(userRegistration.getEmail());
+
+            String password = userRegistration.getPassword();
+            if (isPasswordInBreachedList(password)) {
+                throw new UserException("The password is in the hacker's database!");
+            }
+
+            user.setPassword(passwordEncoder.encode(password));
+            user.grantAuthority(Role.ROLE_USER);
+            userRepository.save(user);
+
+            return createResponse(user);
+        }
+
+        @PostMapping("/api/auth/changepass")
+        public Map<String, Object> changeUserPassword(@Valid @RequestBody NewUserPassword newPassword) {
+
+            Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+            User user = (User) auth.getPrincipal();
+
+            String password = newPassword.getNew_password();
+            if (isPasswordInBreachedList(password)) {
+                throw new UserException("The password is in the hacker's database!");
+            }
+
+            if (passwordEncoder.matches(password, user.getPassword())) {
+                throw new UserException("The passwords must be different!");
+            }
+
+            user.setPassword(passwordEncoder.encode(password));
+            userRepository.save(user);
+
+            Map<String, Object> response = new LinkedHashMap<>();
+            response.put("email", user.getUsername());
+    //        response.put("email", user.getEmail());
+            response.put("status", "The password has been updated successfully");
+
+            return response;
+        }
+
+        public Map<String, Object> createResponse(User user) {
+            Map<String, Object> response = new LinkedHashMap<>();
+            response.put("id", user.getId());
+            response.put("name", user.getName());
+            response.put("lastname", user.getLastname());
+            response.put("email", user.getEmail());
+
+            return response;
+        }
+
+        public boolean isPasswordInBreachedList(String password) {
+
+            String[] breachedList = new String[] {"PasswordForJanuary", "PasswordForFebruary", "PasswordForMarch", "PasswordForApril",
+                    "PasswordForMay", "PasswordForJune", "PasswordForJuly", "PasswordForAugust", "PasswordForSeptember",
+                    "PasswordForOctober", "PasswordForNovember", "PasswordForDecember"};
+
+            for (var breachedPassword : breachedList) {
+                if (breachedPassword.equals(password)) {
+                    return true;
+                }
+            }
+
+            return false;
+        }
+    }
+
+
+    class NewUserPassword {
+        @NotBlank(message = "Empty password field!")
+        @Size(min = 12, message = "Password length must be 12 chars minimum!")
+        private String new_password;
+
+        public NewUserPassword() {
+        }
+
+        public String getNew_password() {
+            return new_password;
+        }
+
+        public void setNew_password(String new_password) {
+            this.new_password = new_password;
+        }
+    }
+
+    class UserRegistration {
+
+        @NotBlank(message = "Empty name field!")
+        private String name;
+        @NotBlank(message = "Empty lastname field!")
+        private String lastname;
+        @NotBlank(message = "Empty email field!")
+        @Email
+        @Pattern(regexp = ".+@acme.com", message = "Wrong email!")
+        private String email;
+        @NotBlank(message = "Empty password field!")
+        @Size(min = 12, message = "The password length must be at least 12 chars!")
+        private String password;
+
+        public UserRegistration() {
+        }
+
+        public UserRegistration(String name, String lastname, String email, String password) {
+            this.name = name;
+            this.lastname = lastname;
+            this.email = email;
+            this.password = password;
+        }
+
+        public String getName() {
+            return name;
+        }
+
+        public void setName(String name) {
+            this.name = name;
+        }
+
+        public String getLastname() {
+            return lastname;
+        }
+
+        public void setLastname(String lastname) {
+            this.lastname = lastname;
+        }
+
+        public String getEmail() {
+            return email;
+        }
+
+        public void setEmail(String email) {
+            this.email = email;
+        }
+
+        public String getPassword() {
+            return password;
+        }
+
+        public void setPassword(String password) {
+            this.password = password;
+        }
+    }
+  learner_created: true
+- name: src/account/configurations/BCryptEncoderConfig.java
+  visible: true
+  text: |
+    package account.configurations;
+
+    import org.springframework.context.annotation.Bean;
+    import org.springframework.context.annotation.Configuration;
+    import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+
+    @Configuration
+    public class BCryptEncoderConfig {
+
+        @Bean
+        public BCryptPasswordEncoder passwordEncoder(){
+            return new BCryptPasswordEncoder();
+        }
+    }
+  learner_created: true
+- name: src/account/exceptions/models/ErrorModel.java
+  visible: true
+  text: |
+    package account.exceptions.models;
+
+    import java.time.LocalDateTime;
+
+    public class ErrorModel {
+
+        private int status;
+
+        private LocalDateTime timestamp;
+
+        private String message;
+        private String error;
+
+        private String path;
+
+        public ErrorModel(int status, String message, String path) {
+            this.timestamp = LocalDateTime.now();
+            this.status = status;
+            this.message = message;
+            this.error = "Bad Request";
+
+            if (path.startsWith("uri=")) {
+                path = path.substring(4);
+            }
+            this.path = path;
+        }
+
+        public int getStatus() {
+            return status;
+        }
+
+        public LocalDateTime getTimestamp() {
+            return timestamp;
+        }
+
+        public String getMessage() {
+            return message;
+        }
+
+        public String getError() {
+            return error;
+        }
+
+        public String getPath() {
+            return path;
+        }
+    }
+  learner_created: true
+- name: src/account/repositories/UserRepository.java
+  visible: true
+  text: |
+    package account.repositories;
+
+    import account.entities.User;
+    import org.springframework.data.jpa.repository.JpaRepository;
+
+    import java.util.Optional;
+
+    public interface UserRepository extends JpaRepository<User, Long> {
+
+        Optional<User> findByUsername(String username);
+    }
+  learner_created: true
+- name: src/account/exceptions/UserException.java
+  visible: true
+  text: |-
+    package account.exceptions;
+
+    public class UserException extends RuntimeException {
+
+        public UserException(String message) {
+            super(message);
+        }
+    }
+  learner_created: true
+- name: src/account/exceptions/RestExceptionHandler.java
+  visible: true
+  text: |
+    package account.exceptions;
+
+    import account.exceptions.models.ErrorModel;
+    import org.springframework.http.HttpHeaders;
+    import org.springframework.http.HttpStatus;
+    import org.springframework.http.ResponseEntity;
+    import org.springframework.web.bind.MethodArgumentNotValidException;
+    import org.springframework.web.bind.annotation.ExceptionHandler;
+    import org.springframework.web.bind.annotation.RestControllerAdvice;
+    import org.springframework.web.context.request.WebRequest;
+    import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
+
+    import java.util.ArrayList;
+    import java.util.List;
+
+
+    @RestControllerAdvice
+    public class RestExceptionHandler extends ResponseEntityExceptionHandler {
+
+        @Override
+        public ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException ex, HttpHeaders headers, HttpStatus status, WebRequest request) {
+
+            List<String> errorMessages = new ArrayList<>();
+            for (var error : ex.getBindingResult().getAllErrors()) {
+                errorMessages.add(error.getDefaultMessage());
+            }
+
+            String message = (errorMessages.size() == 1) ? errorMessages.get(0) : errorMessages.toString();
+            ErrorModel error = new ErrorModel(HttpStatus.BAD_REQUEST.value(), message, request.getDescription(false));
+
+            return new ResponseEntity<>(error, HttpStatus.BAD_REQUEST);
+        }
+
+        @ExceptionHandler(UserException.class)
+        protected ResponseEntity<ErrorModel> handleUserException(UserException ex, WebRequest request) {
+            ErrorModel error = new ErrorModel(HttpStatus.BAD_REQUEST.value(), ex.getMessage(), request.getDescription(false));
+
+            return new ResponseEntity<>(error, HttpStatus.BAD_REQUEST);
+        }
+    }
+  learner_created: true
+- name: src/account/entities/User.java
+  visible: true
+  text: |
+    package account.entities;
+
+    import org.springframework.security.core.GrantedAuthority;
+    import org.springframework.security.core.authority.SimpleGrantedAuthority;
+    import org.springframework.security.core.userdetails.UserDetails;
+
+    import javax.persistence.*;
+    import javax.validation.constraints.NotBlank;
+    import javax.validation.constraints.Size;
+    import java.util.ArrayList;
+    import java.util.List;
+
+    @Entity
+    public class User implements UserDetails {
+
+        @Id
+        @GeneratedValue(strategy = GenerationType.AUTO)
+        private Long id;
+
+        private String username;
+        private String name;
+        private String lastname;
+        private String email;
+
+        @NotBlank
+        @Size(min = 12)
+        private String password;
+
+        private boolean accountNonExpired;
+
+        private boolean accountNonLocked;
+
+        private boolean credentialsNonExpired;
+
+        private boolean enabled;
+
+        @Enumerated(EnumType.STRING)
+        @ElementCollection(fetch = FetchType.EAGER)
+        private List<Role> roles;
+
+        public User() {
+            this.accountNonExpired = true;
+            this.accountNonLocked = true;
+            this.credentialsNonExpired = true;
+            this.enabled = true;
+        }
+
+        public Long getId() {
+            return id;
+        }
+
+        public void setId(Long id) {
+            this.id = id;
+        }
+
+        @Override
+        public String getUsername() {
+            return username;
+        }
+
+        public void setUsername(String username) {
+            //this.username = username;
+            this.username = username.toLowerCase();
+        }
+
+        @Override
+        public String getPassword() {
+            return password;
+        }
+
+        public void setPassword(String password) {
+            this.password = password;
+        }
+
+        public String getName() {
+            return name;
+        }
+
+        public void setName(String name) {
+            this.name = name;
+        }
+
+        public String getLastname() {
+            return lastname;
+        }
+
+        public void setLastname(String lastname) {
+            this.lastname = lastname;
+        }
+
+        public String getEmail() {
+            return email;
+        }
+
+        public void setEmail(String email) {
+            this.email = email;
+        }
+
+        @Override
+        public boolean isAccountNonExpired() {
+            return accountNonExpired;
+        }
+
+        @Override
+        public boolean isAccountNonLocked() {
+            return accountNonLocked;
+        }
+
+        @Override
+        public boolean isCredentialsNonExpired() {
+            return credentialsNonExpired;
+        }
+
+        @Override
+        public boolean isEnabled() {
+            return true;
+        }
+
+        public void grantAuthority(Role authority) {
+            if (roles == null) {
+                roles = new ArrayList<>();
+            }
+            roles.add(authority);
+        }
+
+        @Override
+        public List<GrantedAuthority> getAuthorities(){
+            List<GrantedAuthority> authorities = new ArrayList<>();
+            roles.forEach(role -> authorities.add(new SimpleGrantedAuthority(role.toString())));
+            return authorities;
+        }
+
+    }
+  learner_created: true
+- name: src/account/entities/Role.java
+  visible: true
+  text: |
+    package account.entities;
+
+    public enum Role {
+        ROLE_USER,
+        ROLE_ADMIN
+    }
+  learner_created: true
 feedback_link: https://hyperskill.org/learn/step/16604#comment
 status: Unchecked
 record: -1
