--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/612593/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Thu, 08 Sep 2022 05:40:55 UTC
+update_date: Thu, 08 Sep 2022 10:41:18 UTC
 stages:
 - id: 1086
   step: 16601
@@ -25,7 +25,7 @@ stages:
   is_completed: true
 - id: 1092
   step: 16607
-  is_completed: false
+  is_completed: true
 topics:
   0:
   - title: Write, compile, and run
